fix copyright align

--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
   background: #27272c;
   color: #278ea5;
   position:relative;
-  padding-bottom: 10px;
+  padding-bottom: 30px;
 }
 
 h1 {
